--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb+srv://mongodaria:db2002dpmg@cluster0.r8gcb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 JWT_SECRET=dariaprh
+NODE_ENV=production
