--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "chat app based for web platform",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon backend/server.js"
+    "start": "nodemon backend/server.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix chat && npm run build --prefix chat"
   },
   "author": "Prokhorenko Dariia",
   "license": "ISC",
